fix: MultiJvm test remove

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,6 @@ jobs:
           cache: 'sbt'
 
       - name: Run tests
-        run: sbt "test; MultiJvm/test"
+        run: sbt "test"
         env:
           GITHUB_TOKEN: ${{ secrets.CI }}
